--- a/team/index.html
+++ b/team/index.html
@@ -164,17 +164,18 @@
       </div>
     </div>
 
-    <div class="member">
-      <img src="/images/kedos.jpg" alt="Gülçehre Duygu Yüksel>
+
+  <div class="member">
+      <img src="/images/samildincer.jpg" alt="Gülçehre Duygu Yükselr">
       <div class="member-info">
-        <h3><a href="/team/gulcehreyuksel/">Gülçehre Duygu Yüksel</a></h3>
+        <h3><a href="/team/samildincer/">Gülçehre Duygu Yüksel</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
-        <p><strong>Research Area:</strong> Electronic properties of materials </p>
+        <p><strong>Research Area:</strong> Electronic properties of materials</p>
         <div class="icons">
           <a href="mailto:yukselg@metu.edu.tr"><i class="fas fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/gulcehreyuksel/ " target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/gulcehre" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/gulcehreyuksel/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/gulcehre" target="_blank"><i class="fab fa-github"></i></a>          
         </div>
       </div>
     </div>
@@ -235,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
