--- a/team/index.html
+++ b/team/index.html
@@ -168,7 +168,7 @@
   <div class="member">
       <img src="/images/samildincer.jpg" alt="Gülçehre Duygu Yükselr">
       <div class="member-info">
-        <h3><a href="/team/samildincer/">Gülçehre Duygu Yüksel</a></h3>
+        <h3><a href="/team/gulcehreyuksel/">Gülçehre Duygu Yüksel</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
         <p><strong>Research Area:</strong> Electronic properties of materials</p>
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
