--- a/team/index.html
+++ b/team/index.html
@@ -166,7 +166,7 @@
 
 
   <div class="member">
-      <img src="/images/samildincer.jpg" alt="Gülçehre Duygu Yükselr">
+      <img src="/images/kedos.jpg" alt="Gülçehre Duygu Yüksel">
       <div class="member-info">
         <h3><a href="/team/gulcehreyuksel/">Gülçehre Duygu Yüksel</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
