--- a/team/index.html
+++ b/team/index.html
@@ -193,8 +193,14 @@
         </div>
       </div>
     </div>
+
+    <h3>Alumni</h3>
+
+
+
   </div>
 
+  
   <!-- Footer -->
   <div id="footer-placeholder"></div>
 
@@ -236,6 +242,7 @@
 
 </body>
 </html>
+
 
 
 
