--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -1,1 +1,199 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MIStraLab - İrem Topsakal</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+        .section {
+            padding: 30px;
+            margin: 20px auto;
+            width: 95%;
+            max-width: 1100px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
+        .profile {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 20px;
+        }
+
+        .profile img {
+            width: 250px;
+            height: 333px; /* 4:3 ratio */
+            object-fit: cover;
+            margin-right: 30px;
+            border-radius: 6px;
+        }
+
+        .details h2 {
+            color: #002244;
+            margin-bottom: 4px;
+        }
+
+        .icons {
+            margin-top: 15px;
+        }
+
+        .icons a {
+            margin-right: 12px;
+            text-decoration: none;
+            color: #002244;
+            font-size: 24px;
+        }
+
+        .icons a:hover {
+            color: #0056b3;
+        }
+
+        .publications h3,
+        .pet-section h3 {
+            color: #002244;
+            margin-top: 20px;
+        }
+
+        /* Emoji bullets for Education */
+        .emoji-bullets {
+            list-style: none;
+            padding-left: 0;
+            margin: 6px 0 14px;
+        }
+        .emoji-bullets li::before {
+            content: "🔹 ";
+        }
+
+        /* Pet photos grid */
+        .pet-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+            gap: 14px;
+            margin-top: 12px;
+        }
+        .pet-grid figure {
+            margin: 0;
+            background: #f8fafc;
+            border: 1px solid #eef2f7;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        .pet-grid img {
+            width: 100%;
+            height: 220px;
+            object-fit: cover;
+            display: block;
+        }
+        .pet-grid figcaption {
+            font-size: 0.9em;
+            color: #555;
+            padding: 8px 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Navbar -->
+    <div id="navbar-placeholder"></div>
+
+    <div class="section">
+        <div class="profile">
+            <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
+            <div class="details">
+                <h2>İrem Topsakal</h2>
+                <p style="color: #777; font-size: 0.9em; margin-top: -2px;">Sept 2024 – cont.</p>
+
+                <!-- Education as bullets (no label) -->
+                <ul class="emoji-bullets">
+                    <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
+                    <li>M.Sc. Metallurgical and Materials Engineering, METU (2024 – )</li>
+                </ul>
+
+                <p><strong>Research Area:</strong></p>
+                <p>Process optimization, reinforcement learning, hydrometallurgy</p>
+
+                <div class="icons">
+                    <!-- 1) PERSONAL WEBSITE: update the href below -->
+                    <a href="https://your-website.example" target="_blank" title="Personal Website">
+                        <i class="fas fa-globe"></i>
+                    </a>
+
+                    <a href="mailto:iremto@metu.edu.tr" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="publications">
+            <h3>Publications</h3>
+            <ul>
+                <li>Soon hopefully :)</li>
+                <!-- Add more publications as needed -->
+            </ul>
+        </div>
+    </div>
+
+    <!-- 2) PET PHOTOS SECTION -->
+    <div class="section pet-section">
+        <h3>Pet Photos</h3>
+        <div class="pet-grid">
+            <!-- Replace src with your real image path(s). Add/remove <figure> blocks as needed. -->
+            <figure>
+                <img src="/images/kedos.jpg" alt="Kedoş">
+                <figcaption>The famous cat of the website is Kedoş!</figcaption>
+            </figure>
+            <figure>
+                <img src="/images/kedos2.jpg" alt="Kedos napping">
+                <figcaption>Napping</figcaption>
+            </figure>
+            <figure>
+                <img src="/images/kedos3.jpg" alt="Kedos posing">
+                <figcaption>Posing</figcaption>
+            </figure>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+
+    <!-- Load Navbar and Footer -->
+    <script>
+      fetch("/partials/navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar-placeholder").innerHTML = data;
+
+          const toggle = document.getElementById("hamburger-toggle");
+          const links = document.getElementById("nav-links");
+
+          if (toggle && links) {
+            let isOpen = false;
+
+            toggle.addEventListener("click", () => {
+              if (!isOpen) {
+                links.classList.add("active");
+                isOpen = true;
+              } else {
+                links.classList.add("closing");
+                links.classList.remove("active");
+                setTimeout(() => {
+                  links.classList.remove("closing");
+                  isOpen = false;
+                }, 400);
+              }
+            });
+          }
+        });
+
+      fetch("/partials/footer.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("footer-placeholder").innerHTML = data;
+        });
+    </script>
+</body>
+</html>
