--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -141,7 +141,7 @@
     <div class="section pet-section">
         <h3>Pet Photos</h3>
         <div class="pet-grid">
-            <!-- Replace src with your real image path(s). Add/remove <figure> blocks as needed. -->
+            <!-- Replace src with your real image path(s). Add/remove <figure> blocks as needed. a-->
             <figure>
                 <img src="/images/kedos.jpg" alt="Kedoş">
                 <figcaption>The famous cat of the website is Kedoş!</figcaption>
