--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -117,10 +117,7 @@
 
                 <div class="icons">
                     <!-- 1) PERSONAL WEBSITE: update the href below -->
-                    <a href="https://your-website.example" target="_blank" title="Personal Website">
-                        <i class="fas fa-globe"></i>
-                    </a>
-
+                    <a href="https://iremtopsakal.github.io" target="_blank" title="Personal Website"><i class="fas fa-globe"></i></a>
                     <a href="mailto:iremto@metu.edu.tr" title="Email"><i class="fas fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
@@ -139,7 +136,7 @@
 
     <!-- 2) PET PHOTOS SECTION -->
     <div class="section pet-section">
-        <h3>Pet Photos</h3>
+        <h3>Pet Photos - Kedoş</h3>
         <div class="pet-grid">
             <!-- Replace src with your real image path(s). Add/remove <figure> blocks as needed. a-->
             <figure>
@@ -147,11 +144,11 @@
                 <figcaption>The famous cat of the website is Kedoş!</figcaption>
             </figure>
             <figure>
-                <img src="/images/kedos2.jpg" alt="Kedos napping">
+                <img src="/images/kedos3.jpg" alt="Kedos napping">
                 <figcaption>Napping</figcaption>
             </figure>
             <figure>
-                <img src="/images/kedos3.jpg" alt="Kedos posing">
+                <img src="/images/kedos2.jpg" alt="Kedos posing">
                 <figcaption>Posing</figcaption>
             </figure>
         </div>
