--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -106,15 +106,6 @@
                 <h2>İrem Topsakal</h2>
                 <p style="color: #777; font-size: 0.9em; margin-top: -2px;">Sept 2024 – cont.</p>
 
-                <!-- Education as bullets (no label) -->
-                <ul class="emoji-bullets">
-                    <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
-                    <li>M.Sc. Metallurgical and Materials Engineering, METU (2024 – )</li>
-                </ul>
-
-                <p><strong>Research Area:</strong></p>
-                <p>Process optimization, reinforcement learning, hydrometallurgy</p>
-
                 <div class="icons">
                     <!-- 1) PERSONAL WEBSITE: update the href below -->
                     <a href="https://iremtopsakal.github.io" target="_blank" title="Personal Website"><i class="fas fa-globe"></i></a>
@@ -122,6 +113,15 @@
                     <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                 </div>
+                
+                <p><strong>Education:</strong></p>
+                <ul class="emoji-bullets">
+                    <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
+                </ul>
+
+                <p><strong>Research Area:</strong></p>
+                <p>Process optimization, reinforcement learning, hydrometallurgy</p>
+
             </div>
         </div>
 
