--- a/team/dilarahasil/index.html
+++ b/team/dilarahasil/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIStraLab - Dilara Hasıl</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css"> 
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         .section {
             padding: 30px;
@@ -28,10 +28,12 @@
             height: 333px; /* 4:3 ratio */
             object-fit: cover;
             margin-right: 30px;
+            border-radius: 6px;
         }
 
         .details h2 {
             color: #002244;
+            margin-bottom: 4px;
         }
 
         .icons {
@@ -49,14 +51,46 @@
             color: #0056b3;
         }
 
-        .publications h3 {
+        .publications h3,
+        .pet-section h3 {
             color: #002244;
             margin-top: 20px;
         }
 
-        .publications ul {
-            list-style-type: disc;
-            margin-left: 20px;
+        /* Emoji bullets for Education */
+        .emoji-bullets {
+            list-style: none;
+            padding-left: 0;
+            margin: 6px 0 14px;
+        }
+        .emoji-bullets li::before {
+            content: "🔹 ";
+        }
+
+        /* Pet photos grid */
+        .pet-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+            gap: 14px;
+            margin-top: 12px;
+        }
+        .pet-grid figure {
+            margin: 0;
+            background: #f8fafc;
+            border: 1px solid #eef2f7;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        .pet-grid img {
+            width: 100%;
+            height: 220px;
+            object-fit: cover;
+            display: block;
+        }
+        .pet-grid figcaption {
+            font-size: 0.9em;
+            color: #555;
+            padding: 8px 10px;
         }
     </style>
 </head>
@@ -70,67 +104,96 @@
             <img src="/images/dilarahasil.jpg" alt="Dilara Hasıl">
             <div class="details">
                 <h2>Dilara Hasıl</h2>
-                <p><strong>Education:</strong> Ph.D. in Materials Science, XYZ University, 2015</p>
-                <p><strong>Research Area:</strong> Data-driven Materials Discovery, Computational Materials Science, Materials Informatics</p>
+                <p style="color: #777; font-size: 0.9em; margin-top: -2px;"> Jan 2024 – cont.</p>
 
                 <div class="icons">
-                    <a href="mailto:example@example.com" title="Email"><i class="fas fa-envelope"></i></a>
-                    <a href="https://orcid.org/0000-0000-0000-0000" target="_blank" title="ORCID"><i class="fa-brands fa-orcid"></i></a>
-                    <a href="https://scholar.google.com" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/example" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                    <!-- 1) PERSONAL WEBSITE: update the href below -->
+                    <a href="mailto:dilara.hasil@metu.edu.tr" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/dilara-has%C4%B1l/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 </div>
+                
+                <p><strong>Education:</strong></p>
+                <ul class="emoji-bullets">
+                    <li>B.Sc. Metallurgical and Materials Engineering, METU (2016 – 2022)</li>
+                    <li>Minor, Production in Mechanical Engineering, METU (2023)</li>
+                </ul>
+
+                <p><strong>Research Area:</strong></p>
+                <p>Process optimization, reinforcement learning, hydrometallurgy</p>
+
             </div>
         </div>
 
         <div class="publications">
             <h3>Publications</h3>
             <ul>
-                <li>Doe, J., Sargin, I., et al. (2023). Title of the Research Paper. <em>Journal Name</em>.</li>
-                <li>Sargin, I., et al. (2021). Another Paper Title. <em>Advanced Materials</em>.</li>
+                <li>Soon hopefully :)</li>
                 <!-- Add more publications as needed -->
             </ul>
+        </div>
+    </div>
+
+    <!-- 2) PET PHOTOS SECTION -->
+    <div class="section pet-section">
+        <h3>Pet Photos - Nohut</h3>
+        <div class="pet-grid">
+            <!-- Replace src with your real image path(s). Add/remove <figure> blocks as needed. a-->
+            <figure>
+                <img src="/images/nohut1.jpg" alt="Nohut">
+                <figcaption>Starbucks and chill</figcaption>
+            </figure>
+            <figure>
+                <img src="/images/nohut2.jpg" alt="Kedos napping">
+                <figcaption>Little tongue</figcaption>
+            </figure>
+            <figure>
+                <img src="/images/nohut3.jpg" alt="Kedos posing">
+                <figcaption>Dead sleeping</figcaption>
+            </figure>
+            <figure>
+                <img src="/images/nohut4.jpg" alt="Kedos posing">
+                <figcaption>DAYIIIII!!</figcaption>
+            </figure>            
         </div>
     </div>
 
     <!-- Footer -->
     <div id="footer-placeholder"></div>
 
+    <!-- Load Navbar and Footer -->
+    <script>
+      fetch("/partials/navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar-placeholder").innerHTML = data;
 
-  <!-- Load Navbar and Footer -->
-  <script>
-    fetch("/partials/navbar.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("navbar-placeholder").innerHTML = data;
+          const toggle = document.getElementById("hamburger-toggle");
+          const links = document.getElementById("nav-links");
 
-        const toggle = document.getElementById("hamburger-toggle");
-        const links = document.getElementById("nav-links");
+          if (toggle && links) {
+            let isOpen = false;
 
-        if (toggle && links) {
-          let isOpen = false;
+            toggle.addEventListener("click", () => {
+              if (!isOpen) {
+                links.classList.add("active");
+                isOpen = true;
+              } else {
+                links.classList.add("closing");
+                links.classList.remove("active");
+                setTimeout(() => {
+                  links.classList.remove("closing");
+                  isOpen = false;
+                }, 400);
+              }
+            });
+          }
+        });
 
-          toggle.addEventListener("click", () => {
-            if (!isOpen) {
-              links.classList.add("active");
-              isOpen = true;
-            } else {
-              links.classList.add("closing");
-              links.classList.remove("active");
-              setTimeout(() => {
-                links.classList.remove("closing");
-                isOpen = false;
-              }, 400);
-            }
-          });
-        }
-      });
-
-    fetch("/partials/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer-placeholder").innerHTML = data;
-      });
-  </script>
+      fetch("/partials/footer.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("footer-placeholder").innerHTML = data;
+        });
+    </script>
 </body>
 </html>
