--- a/team/index.html
+++ b/team/index.html
@@ -109,7 +109,7 @@
       <img src="/images/ugurakbulut.jpg" alt="Rıza Uğur Akbulut">
       <div class="member-info">
         <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
-        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2024 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
         <p> • Minor, Physics, METU (2025)</p>
         <p><strong>Research Area:</strong> Electronic properties of materials</p>
@@ -124,7 +124,7 @@
       <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
       <div class="member-info">
         <h3><a href="/team/iremtopsakal/">İrem Topsakal</a></h3>
-        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2024 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
@@ -139,7 +139,7 @@
       <img src="/images/dilarahasil.jpg" alt="Dilara Hasıl">
       <div class="member-info">
         <h3><a href="/team/dilarahasil/">Dilara Hasıl</a></h3>
-        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Jan 2024 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
@@ -242,6 +242,7 @@
 
 </body>
 </html>
+
 
 
 
