--- a/team/index.html
+++ b/team/index.html
@@ -141,6 +141,7 @@
         <h3><a href="/team/dilarahasil/">Dilara Hasıl</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Jan 2024 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
+        <p> • Minor, Production in Mechanical Engineering, METU (2023)</p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
           <a href="mailto:dilara.hasil@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -242,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
