--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -1,196 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MIStraLab - İrem Topsakal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        .section {
-            padding: 30px;
-            margin: 20px auto;
-            width: 95%;
-            max-width: 1100px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        :root{
+          --ink:#002244;
+          --ink-weak:#777;
+          --panel:#fff;
+          --ring:rgba(0,0,0,.08);
+          --soft:#f8fafc;
+          --soft-border:#eef2f7;
         }
 
-        .profile {
-            display: flex;
-            align-items: flex-start;
-            margin-bottom: 20px;
+        .section{
+          padding:32px;
+          margin:20px auto;
+          width:95%;
+          max-width:1100px;
+          background:var(--panel);
+          border-radius:12px;
+          box-shadow:0 2px 4px rgba(0,0,0,.06);
         }
 
-        .profile img {
-            width: 250px;
-            height: 333px; /* 4:3 ratio */
-            object-fit: cover;
-            margin-right: 30px;
-            border-radius: 6px;
+        /* -------- Profile block -------- */
+        .profile{
+          display:grid;
+          grid-template-columns: 260px 1fr;
+          gap:28px;
+          align-items:start;
+          margin-bottom:16px;
         }
 
-        .details h2 {
-            color: #002244;
-            margin-bottom: 4px;
+        .profile img{
+          width:100%;
+          max-width:260px;
+          border-radius:10px;
+          object-fit:cover;
+          aspect-ratio: 3 / 4; /* keeps the portrait tidy on all sizes */
+          box-shadow:0 1px 2px rgba(0,0,0,.06);
         }
 
-        .icons {
-            margin-top: 15px;
+        .details h2{
+          color:var(--ink);
+          margin:0 0 6px;
+          line-height:1.2;
         }
 
-        .icons a {
-            margin-right: 12px;
-            text-decoration: none;
-            color: #002244;
-            font-size: 24px;
+        .details .tenure{
+          color:var(--ink-weak);
+          font-size:.95rem;
+          margin:0 0 12px;
         }
 
-        .icons a:hover {
-            color: #0056b3;
+        .icons{
+          display:flex;
+          gap:12px;
+          margin:10px 0 18px;
+          flex-wrap:wrap;
         }
+        .icons a{
+          display:inline-flex;
+          align-items:center;
+          justify-content:center;
+          width:40px;
+          height:40px;
+          border-radius:999px;
+          border:1px solid var(--ring);
+          text-decoration:none;
+          color:var(--ink);
+          font-size:18px;
+          transition:transform .08s ease, background .2s ease, border-color .2s ease;
+        }
+        .icons a:hover{ background:#f2f6fb; border-color:#cdd9ea; transform:translateY(-1px); }
 
         .publications h3,
-        .pet-section h3 {
-            color: #002244;
-            margin-top: 20px;
+        .pet-section h3{
+          color:var(--ink);
+          margin:10px 0 12px;
         }
 
         /* Emoji bullets for Education */
-        .emoji-bullets {
-            list-style: none;
-            padding-left: 0;
-            margin: 6px 0 14px;
+        .emoji-bullets{ list-style:none; padding:0; margin:6px 0 14px; }
+        .emoji-bullets li::before{ content:"🔹 "; }
+
+        /* -------- Pet photos grid -------- */
+        .pet-grid{
+          display:grid;
+          grid-template-columns:repeat(auto-fill, minmax(200px,1fr));
+          gap:14px;
+          margin-top:12px;
         }
-        .emoji-bullets li::before {
-            content: "🔹 ";
+        .pet-grid figure{
+          margin:0;
+          background:var(--soft);
+          border:1px solid var(--soft-border);
+          border-radius:10px;
+          overflow:hidden;
+        }
+        .pet-grid img{
+          width:100%;
+          height:220px;
+          object-fit:cover;
+          display:block;
+        }
+        .pet-grid figcaption{
+          font-size:.92rem;
+          color:#555;
+          padding:10px 12px;
         }
 
-        /* Pet photos grid */
-        .pet-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-            gap: 14px;
-            margin-top: 12px;
+        /* -------- Mobile tweaks -------- */
+        @media (max-width: 900px){
+          .section{ padding:26px; }
+          .profile{ grid-template-columns: 220px 1fr; gap:20px; }
+          .profile img{ max-width:220px; }
         }
-        .pet-grid figure {
-            margin: 0;
-            background: #f8fafc;
-            border: 1px solid #eef2f7;
-            border-radius: 8px;
-            overflow: hidden;
+
+        @media (max-width: 640px){
+          .section{ padding:22px; }
+          .profile{
+            grid-template-columns: 1fr;      /* stack */
+            justify-items:center;            /* center photo */
+            text-align:left;                 /* keep body text left */
+            gap:16px;
+          }
+          .profile img{
+            max-width: min(85vw, 360px);     /* comfy size on phones */
+          }
+          .details{ width:100%; }
+          .details h2{ font-size:1.6rem; }
+          .icons{ gap:10px; }
+          .icons a{ width:44px; height:44px; font-size:20px; }
+
+          .pet-grid{
+            grid-template-columns:repeat(auto-fill, minmax(140px,1fr));
+            gap:10px;
+          }
+          .pet-grid img{ height:180px; }
         }
-        .pet-grid img {
-            width: 100%;
-            height: 220px;
-            object-fit: cover;
-            display: block;
-        }
-        .pet-grid figcaption {
-            font-size: 0.9em;
-            color: #555;
-            padding: 8px 10px;
+
+        /* Reduce motion accessibility */
+        @media (prefers-reduced-motion: reduce){
+          .icons a{ transition:none; }
         }
     </style>
 </head>
 <body>
 
-    <!-- Navbar -->
-    <div id="navbar-placeholder"></div>
+  <!-- Navbar (unchanged) -->
+  <div id="navbar-placeholder"></div>
 
-    <div class="section">
-        <div class="profile">
-            <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
-            <div class="details">
-                <h2>İrem Topsakal</h2>
-                <p style="color: #777; font-size: 0.9em; margin-top: -2px;">Sept 2024 – cont.</p>
+  <div class="section">
+    <div class="profile">
+      <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
+      <div class="details">
+        <h2>İrem Topsakal</h2>
+        <p class="tenure">Sept 2024 – cont.</p>
 
-                <div class="icons">
-                    <!-- 1) PERSONAL WEBSITE: update the href below -->
-                    <a href="https://iremtopsakal.github.io" target="_blank" title="Personal Website"><i class="fas fa-globe"></i></a>
-                    <a href="mailto:iremto@metu.edu.tr" title="Email"><i class="fas fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                </div>
-                
-                <p><strong>Education:</strong></p>
-                <ul class="emoji-bullets">
-                    <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
-                </ul>
-
-                <p><strong>Research Area:</strong></p>
-                <p>Process optimization, reinforcement learning, hydrometallurgy</p>
-
-            </div>
+        <div class="icons">
+          <a href="https://iremtopsakal.github.io" target="_blank" title="Personal Website" aria-label="Personal Website"><i class="fas fa-globe"></i></a>
+          <a href="mailto:iremto@metu.edu.tr" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </div>
 
-        <div class="publications">
-            <h3>Publications</h3>
-            <ul>
-                <li>Soon hopefully :)</li>
-                <!-- Add more publications as needed -->
-            </ul>
-        </div>
+        <p><strong>Education:</strong></p>
+        <ul class="emoji-bullets">
+          <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
+        </ul>
+
+        <p><strong>Research Area:</strong></p>
+        <p>Process optimization, reinforcement learning, hydrometallurgy</p>
+      </div>
     </div>
 
-    <!-- 2) PET PHOTOS SECTION -->
-    <div class="section pet-section">
-        <h3>Pet Photos - Kedoş</h3>
-        <div class="pet-grid">
-            <!-- Replace src with your real image path(s). Add/remove <figure> blocks as needed. a-->
-            <figure>
-                <img src="/images/kedos.jpg" alt="Kedoş">
-                <figcaption>The famous cat of the website is Kedoş!</figcaption>
-            </figure>
-            <figure>
-                <img src="/images/kedos3.jpg" alt="Kedos napping">
-                <figcaption>Napping</figcaption>
-            </figure>
-            <figure>
-                <img src="/images/kedos2.jpg" alt="Kedos posing">
-                <figcaption>Posing</figcaption>
-            </figure>
-        </div>
+    <div class="publications">
+      <h3>Publications</h3>
+      <ul>
+        <li>Soon hopefully :)</li>
+      </ul>
     </div>
+  </div>
 
-    <!-- Footer -->
-    <div id="footer-placeholder"></div>
+  <!-- Pet photos section -->
+  <div class="section pet-section">
+    <h3>Pet Photos - Kedoş</h3>
+    <div class="pet-grid">
+      <figure>
+        <img src="/images/kedos.jpg" alt="Kedoş">
+        <figcaption>The famous cat of the website is Kedoş!</figcaption>
+      </figure>
+      <figure>
+        <img src="/images/kedos3.jpg" alt="Kedos napping">
+        <figcaption>Napping</figcaption>
+      </figure>
+      <figure>
+        <img src="/images/kedos2.jpg" alt="Kedos posing">
+        <figcaption>Posing</figcaption>
+      </figure>
+    </div>
+  </div>
 
-    <!-- Load Navbar and Footer -->
-    <script>
-      fetch("/partials/navbar.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("navbar-placeholder").innerHTML = data;
+  <!-- Footer (unchanged) -->
+  <div id="footer-placeholder"></div>
 
-          const toggle = document.getElementById("hamburger-toggle");
-          const links = document.getElementById("nav-links");
+  <!-- Load Navbar and Footer (unchanged) -->
+  <script>
+    fetch("/partials/navbar.html")
+      .then(r => r.text())
+      .then(html => {
+        document.getElementById("navbar-placeholder").innerHTML = html;
 
-          if (toggle && links) {
-            let isOpen = false;
+        const toggle = document.getElementById("hamburger-toggle");
+        const links  = document.getElementById("nav-links");
+        if (toggle && links){
+          let open = false;
+          toggle.addEventListener("click", () => {
+            if (!open){
+              links.classList.add("active");
+              open = true;
+            } else {
+              links.classList.add("closing");
+              links.classList.remove("active");
+              setTimeout(() => {
+                links.classList.remove("closing");
+                open = false;
+              }, 400);
+            }
+          });
+        }
+      });
 
-            toggle.addEventListener("click", () => {
-              if (!isOpen) {
-                links.classList.add("active");
-                isOpen = true;
-              } else {
-                links.classList.add("closing");
-                links.classList.remove("active");
-                setTimeout(() => {
-                  links.classList.remove("closing");
-                  isOpen = false;
-                }, 400);
-              }
-            });
-          }
-        });
-
-      fetch("/partials/footer.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("footer-placeholder").innerHTML = data;
-        });
-    </script>
+    fetch("/partials/footer.html")
+      .then(r => r.text())
+      .then(html => { document.getElementById("footer-placeholder").innerHTML = html; });
+  </script>
 </body>
 </html>
