--- a/team/dilarahasil/index.html
+++ b/team/dilarahasil/index.html
@@ -171,7 +171,15 @@
         <p>Process optimization, reinforcement learning, hydrometallurgy</p>
       </div>
     </div>
-
+    
+    <div class="conferences">
+      <h3>Conferences</h3>
+      <ul>
+        <li> Hasil, D., & Sargin, I. (2025, May). Leaching Behavior Analysis and Efficiency Optimization of Critical Metals from Secondary Sources: A Data-Driven Approach. Presented at the E-MRS Spring 2025 Conference. </li>
+      </ul>
+    </div>
+  </div>
+  
     <div class="publications">
       <h3>Publications</h3>
       <ul>
