--- a/team/dilarahasil/index.html
+++ b/team/dilarahasil/index.html
@@ -161,6 +161,8 @@
           <a href="https://www.linkedin.com/in/dilara-has%C4%B1l/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
 
+        <p>Working as a Project Researcher at EU Horizon Project: EURO-TITAN</p>
+        
         <p><strong>Education:</strong></p>
         <ul class="emoji-bullets">
           <li>B.Sc. Metallurgical and Materials Engineering, METU (2016 – 2022)</li>
@@ -168,7 +170,7 @@
         </ul>
 
         <p><strong>Research Area:</strong></p>
-        <p>Process optimization, reinforcement learning, hydrometallurgy</p>
+        <p>Process optimization, reinforcement learning, hydrometallurgy, sustainable titanium recovery</p>
       </div>
     </div>
     
