--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -167,7 +167,8 @@
           <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </div>
-
+          
+        <p>Working as a Research and Teaching Assistant in METU</p>        
         <p><strong>Education:</strong></p>
         <ul class="emoji-bullets">
           <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
@@ -178,10 +179,18 @@
       </div>
     </div>
 
+    <div class="conferences">
+      <h3>Conferences</h3>
+      <ul>
+        <li> Hopefully soon :) </li>
+      </ul>
+    </div>
+
+
     <div class="publications">
       <h3>Publications</h3>
       <ul>
-        <li>Soon hopefully :)</li>
+        <li> Hopefully soon :) </li>
       </ul>
     </div>
   </div>
