--- a/team/dilarahasil/index.html
+++ b/team/dilarahasil/index.html
@@ -194,19 +194,19 @@
     <h3>Pet Photos - Nohut</h3>
     <div class="pet-grid">
       <figure>
-        <img src="/images/nohut1.jpg" alt="Nohut with a drink">
+        <img src="/images/pets/nohut1.jpg" alt="Nohut with a drink">
         <figcaption>Starbucks and chill</figcaption>
       </figure>
       <figure>
-        <img src="/images/nohut2.jpg" alt="Nohut small tongue">
+        <img src="/images/pets/nohut2.jpg" alt="Nohut small tongue">
         <figcaption>Little tongue</figcaption>
       </figure>
       <figure>
-        <img src="/images/nohut3.jpg" alt="Nohut sleeping">
+        <img src="/images/pets/nohut3.jpg" alt="Nohut sleeping">
         <figcaption>Dead sleeping</figcaption>
       </figure>
       <figure>
-        <img src="/images/nohut4.jpg" alt="Nohut excited">
+        <img src="/images/pets/nohut4.jpg" alt="Nohut excited">
         <figcaption>DAYIIIII!!</figcaption>
       </figure>
     </div>
