--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -204,11 +204,11 @@
         <figcaption>The famous cat of the website is Kedoş!</figcaption>
       </figure>
       <figure>
-        <img src="/images/kedos3.jpg" alt="Kedos napping">
+        <img src="/images/pets/kedos3.jpg" alt="Kedos napping">
         <figcaption>Napping</figcaption>
       </figure>
       <figure>
-        <img src="/images/kedos2.jpg" alt="Kedos posing">
+        <img src="/images/pets/kedos2.jpg" alt="Kedos posing">
         <figcaption>Posing</figcaption>
       </figure>
     </div>
