--- a/team/ugurakbulut/index.html
+++ b/team/ugurakbulut/index.html
@@ -170,6 +170,7 @@
         <p><strong>Education:</strong></p>
         <ul class="emoji-bullets">
           <li>B.Sc. Metallurgical and Materials Engineering, METU (2018 – 2024)</li>
+          <li>Minor, Physics, METU (  – 2025)</li>
         </ul>
 
         <p><strong>Research Area:</strong></p>
