--- a/team/index.html
+++ b/team/index.html
@@ -71,7 +71,7 @@
 
     <h3>Principal Investigator</h3>
     <div class="member">
-      <img src="/images/sargin.jpg" alt="Principal Investigator">
+      <img src="/images/profiles/sargin.jpg" alt="Principal Investigator">
       <div class="member-info">
         <h3><a href="/team/sargin/">Dr. Irmak Sargın</a></h3>
         <p><strong>Education:</strong> Ph.D. in ...</p>
@@ -243,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
