--- a/team/index.html
+++ b/team/index.html
@@ -106,7 +106,7 @@
     <h3>Master Students</h3>
 
     <div class="member">
-      <img src="/images/ugurakbulut.jpg" alt="Rıza Uğur Akbulut">
+      <img src="/images/profiles/ugurakbulut.jpg" alt="Rıza Uğur Akbulut">
       <div class="member-info">
         <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2024 - cont.</p>
@@ -121,7 +121,7 @@
     </div>
 
     <div class="member">
-      <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
+      <img src="/images/profiles/iremtopsakal.jpg" alt="İrem Topsakal">
       <div class="member-info">
         <h3><a href="/team/iremtopsakal/">İrem Topsakal</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2024 - cont.</p>
@@ -136,7 +136,7 @@
     </div>
 
     <div class="member">
-      <img src="/images/dilarahasil.jpg" alt="Dilara Hasıl">
+      <img src="/images/profiles/dilarahasil.jpg" alt="Dilara Hasıl">
       <div class="member-info">
         <h3><a href="/team/dilarahasil/">Dilara Hasıl</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Jan 2024 - cont.</p>
@@ -152,7 +152,7 @@
 
     
   <div class="member">
-      <img src="/images/samildincer.jpg" alt="Mehmet Şamil Dinçer">
+      <img src="/images/profiles/samildincer.jpg" alt="Mehmet Şamil Dinçer">
       <div class="member-info">
         <h3><a href="/team/samildincer/">Mehmet Şamil Dinçer</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2022 - cont.</p>
@@ -167,7 +167,7 @@
 
 
   <div class="member">
-      <img src="/images/gulcehreyuksel.jpg" alt="Gülçehre Duygu Yüksel">
+      <img src="/images/profiles/gulcehreyuksel.jpg" alt="Gülçehre Duygu Yüksel">
       <div class="member-info">
         <h3><a href="/team/gulcehreyuksel/">Gülçehre Duygu Yüksel</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
@@ -243,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
