--- a/contact/index.html
+++ b/contact/index.html
@@ -1,120 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MIStraLab - Contact</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <style>
-        body { 
-            font-family: 'Arial', sans-serif; 
-            margin: 0; 
-            padding: 0; 
-            background-color: #f5f5f5;
-            padding-top: 60px; 
-            overflow-y: scroll;
-        }
-        nav { 
-            background-color: #002244; 
-            padding: 10px 0; 
-            text-align: center; 
-            position: fixed; 
-            top: 0; 
-            left: 0; 
-            right: 0; 
-            z-index: 1000; 
-        }
-        nav a { 
-            color: white; 
-            margin: 0 15px; 
-            text-decoration: none; 
-            font-weight: bold; 
-        }
-        .section { 
-            padding: 30px; 
-            margin: 20px auto; 
-            width: 95%; 
-            max-width: 1100px; 
-            background-color: white; 
-            border-radius: 8px; 
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
-        }
-        h2 {
-            font-size: 36px;
-            color: #002244;
-            margin-bottom: 30px;
-        }
-        .contact-container {
-            display: flex;
-            gap: 20px;
-        }
-        .contact-info {
-            flex: 1;
-        }
-        .contact-info p {
-            margin: 5px 0;
-            font-size: 18px;
-        }
-        .map-container {
-            flex: 1;
-        }
-        .map-container iframe {
-            width: 100%;
-            height: 250px;
-            border: 0;
-            border-radius: 8px;
-        }
-        .footer { 
-            background-color: #003366; 
-            color: white; 
-            text-align: center; 
-            padding: 12px 0; 
-            margin-top: 30px; 
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MIStraLab - Contact</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <style>
+    body{
+      font-family: Arial, sans-serif;
+      margin:0;
+      padding:0;
+      background:#f5f5f5;
+      padding-top:60px;
+      overflow-y:scroll;
+    }
+
+    nav{
+      background:#002244;
+      padding:10px 0;
+      text-align:center;
+      position:fixed; top:0; left:0; right:0;
+      z-index:1000;
+    }
+    nav a{ color:#fff; margin:0 15px; text-decoration:none; font-weight:bold; }
+
+    .section{
+      padding:30px;
+      margin:20px auto;
+      width:95%;
+      max-width:1100px;
+      background:#fff;
+      border-radius:8px;
+      box-shadow:0 2px 4px rgba(0,0,0,.1);
+    }
+
+    h2{
+      font-size:36px;
+      color:#002244;
+      margin-bottom:24px;
+    }
+
+    .contact-container{
+      display:flex;
+      gap:20px;
+      align-items:flex-start;
+      flex-wrap:wrap;
+    }
+
+    .contact-info{ flex:1 1 360px; }
+    .contact-info p{ margin:6px 0; font-size:18px; }
+
+    .map-container{ flex:1 1 360px; }
+    .map-container iframe{
+      width:100%;
+      height:250px;
+      border:0;
+      border-radius:8px;
+    }
+
+    /* Website issue note */
+    .note{
+      margin-top:16px;
+      padding-top:10px;
+      border-top:1px solid #e9e9e9;
+      font-size:.86rem;
+      line-height:1.45;
+      color:#555;
+    }
+    .note a{
+      color:#0056b3;
+      text-decoration:none;
+    }
+    .note a:hover{ text-decoration:underline; }
+
+    /* Emphasis line for research contact */
+    .research-contact{
+      margin-top:10px;
+      font-size:16px;
+      color:#444;
+      font-style:italic;
+    }
+
+    @media (max-width:640px){
+      .section{ padding:22px; }
+      h2{ font-size:28px; margin-bottom:18px; }
+      .contact-info p{ font-size:16px; }
+      .map-container iframe{ height:220px; }
+      .research-contact{ font-size:15px; }
+    }
+  </style>
 </head>
 <body>
-    
-    <!-- Navbar -->
-    <div id="navbar-placeholder"></div>
-	
-    <div class="section">
-        <h2>Contact</h2>
 
-        <div class="contact-container">
-            <div class="contact-info">
-                <p><strong>Assist. Prof. Dr. Irmak Sargın</strong></p>
-		<p>Üniversiteler Mahallesi, Dumlupınar Bulvarı</p>
-                <p>Department of Metallurgical and Materials Engineering</p>
-                <p>Middle East Technical University</p>
-                <p>Room no:A-201, 06800</p>
-                <p>Ankara, Turkiye</p>
-                <p>Email: example@university.edu</p>
-            </div>
+  <!-- Navbar -->
+  <div id="navbar-placeholder"></div>
 
-            <div class="map-container">
-                <!-- Google Maps Embed (Replace with your lab's location) -->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3061.469550435158!2d32.782467499999996!3d39.8861183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3464106ade6df%3A0x688b273f1308db0e!2sMETU%20Department%20of%20Metallurgy%20and%20Materials%20Engineering!5e0!3m2!1sen!2str!4v1739620975637!5m2!1sen!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
+  <div class="section">
+    <h2>Contact</h2>
+
+    <div class="contact-container">
+      <div class="contact-info">
+        <p><strong>Assist. Prof. Dr. Irmak Sargın</strong></p>
+        <p>Üniversiteler Mahallesi, Dumlupınar Bulvarı</p>
+        <p>Department of Metallurgical and Materials Engineering</p>
+        <p>Middle East Technical University</p>
+        <p>Room no: A-201, 06800</p>
+        <p>Ankara, Türkiye</p>
+        <p>Email: example@university.edu</p>
+
+        <p class="research-contact">
+          👉 For all <strong>research group inquiries</strong>, please contact Assist. Prof. Dr. Irmak Sargın.
+        </p>
+      </div>
+
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3061.469550435158!2d32.782467499999996!3d39.8861183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3464106ade6df%3A0x688b273f1308db0e!2sMETU%20Department%20of%20Metallurgy%20and%20Materials%20Engineering!5e0!3m2!1sen!2str!4v1739620975637!5m2!1sen!2str"
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
     </div>
-    <!-- Footer -->
-    <div id="footer-placeholder"></div>
 
-    <!-- Navbar & Footer Loading -->
-    <!-- Navbar & Footer Loading -->
-    <script>
+    <!-- Website issue note -->
+    <div class="note">
+      <p>
+        <em>Note:</em> For any <strong>issues related to the website</strong>, please contact
+        <a href="https://mistralab.github.io/team/iremtopsakal/" target="_blank" rel="noopener">İrem Topsakal</a>.
+      </p>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div id="footer-placeholder"></div>
+
+  <!-- Navbar & Footer Loading -->
+  <script>
     fetch("/partials/navbar.html")
       .then((response) => response.text())
       .then((data) => {
         document.getElementById("navbar-placeholder").innerHTML = data;
 
         const toggle = document.getElementById("hamburger-toggle");
-        const links = document.getElementById("nav-links");
-
+        const links  = document.getElementById("nav-links");
         if (toggle && links) {
           let isOpen = false;
-
           toggle.addEventListener("click", () => {
             if (!isOpen) {
               links.classList.add("active");
@@ -136,7 +165,7 @@
       .then((data) => {
         document.getElementById("footer-placeholder").innerHTML = data;
       });
-   </script>
+  </script>
 
 </body>
 </html>
