--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -156,7 +156,7 @@
 
   <div class="section">
     <div class="profile">
-      <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
+      <img src="/images/profiles/iremtopsakal.jpg" alt="İrem Topsakal">
       <div class="details">
         <h2>İrem Topsakal</h2>
         <p class="tenure">Sept 2024 – cont.</p>
