--- a/contact/index.html
+++ b/contact/index.html
@@ -114,7 +114,7 @@
         <p>Middle East Technical University</p>
         <p>Room no: A-201, 06800</p>
         <p>Ankara, Türkiye</p>
-        <p>Email: example@university.edu</p>
+        <p>Email: isargin  [at ] metu.edu.tr</p>
 
         <!-- Red-accent line (no emoji) -->
         <p class="research-contact">
@@ -135,7 +135,7 @@
     <!-- Website issue note (only for website; stays subtle) -->
     <div class="note">
       <p>
-        <em>Note:</em> For any <strong>issues related to the website</strong>, please contact
+        <em>Note:</em> For any issues related to the website, please contact
         <a href="https://mistralab.github.io/team/iremtopsakal/" target="_blank" rel="noopener">İrem Topsakal</a>.
       </p>
     </div>
@@ -180,3 +180,4 @@
 
 </body>
 </html>
+
