--- a/team/dilarahasil/index.html
+++ b/team/dilarahasil/index.html
@@ -151,7 +151,7 @@
 
   <div class="section">
     <div class="profile">
-      <img src="/images/dilarahasil.jpg" alt="Dilara Hasıl">
+      <img src="/images/profiles/dilarahasil.jpg" alt="Dilara Hasıl">
       <div class="details">
         <h2>Dilara Hasıl</h2>
         <p class="tenure">Jan 2024 – cont.</p>
