--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -164,7 +164,7 @@
         <div class="icons">
           <a href="https://iremtopsakal.github.io" target="_blank" title="Personal Website" aria-label="Personal Website"><i class="fas fa-globe"></i></a>
           <a href="mailto:iremto@metu.edu.tr" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/iremtopsakal/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/iremtopsakal/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/iremtopsakal" target="_blank" title="GitHub" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </div>
           
