--- a/team/ugurakbulut/index.html
+++ b/team/ugurakbulut/index.html
@@ -163,7 +163,7 @@
 
         <div class="icons">
           <a href="mailto:uakbulut@metu.edu.tr" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/rugurakbulut/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/rugurakbulut/" target="_blank" title="LinkedIn" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
           
         <p>Working as a Research and Teaching Assistant in METU</p>        
