--- a/team/index.html
+++ b/team/index.html
@@ -74,14 +74,14 @@
       <img src="/images/profiles/sargin.jpg" alt="Principal Investigator">
       <div class="member-info">
         <h3><a href="/team/sargin/">Dr. Irmak Sargın</a></h3>
-        <p><strong>Education:</strong> Ph.D. in ...</p>
-        <p><strong>Research Area:</strong> Materials Informatics, Data-driven Discovery...</p>
+        <p> • Post-doc, Washington State University, WA, USA (2015-2018)</p>
+        <p> • Post-doc, Massachusetts Institute of Technology, MA, USA (2016-2017)</p>
+        <p> • Ph.D. Iowa State University, IA, USA (2015)</p>
+        <p><strong>Research Area:</strong> Materials Informatics, Data-driven Material Discovery</p>
         <div class="icons">
-          <a href="mailto:example@example.com" title="Email"><i class="fas fa-envelope"></i></a>
-          <a href="https://orcid.org/0000-0000-0000-0000" target="_blank" title="ORCID"><i class="fa-brands fa-orcid"></i></a>
+          <a href="mailto:isargin@metu.edu.tr" title="Email"><i class="fas fa-envelope"></i></a>
+          <a href="https://orcid.org/0000-0001-5156-5448" target="_blank" title="ORCID"><i class="fa-brands fa-orcid"></i></a>
           <a href="https://scholar.google.com/citations?user=ag_2tt4AAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-          <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/example" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -115,7 +115,7 @@
         <p><strong>Research Area:</strong> Electronic properties of materials</p>
         <div class="icons">
           <a href="mailto:uakbulut@metu.edu.tr"><i class="fas fa-envelope"></i></a>
-          <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/rugurakbulut/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
@@ -243,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
