--- a/team/index.html
+++ b/team/index.html
@@ -77,7 +77,7 @@
         <p> • Post-doc, Washington State University, WA, USA (2015-2018)</p>
         <p> • Post-doc, Massachusetts Institute of Technology, MA, USA (2016-2017)</p>
         <p> • Ph.D. Iowa State University, IA, USA (2015)</p>
-        <p><strong>Research Area:</strong> Materials Informatics, Data-driven Material Discovery</p>
+        <p><strong>Research Area:</strong> Materials Informatics, Materials Criticality</p>
         <div class="icons">
           <a href="mailto:isargin@metu.edu.tr" title="Email"><i class="fas fa-envelope"></i></a>
           <a href="https://orcid.org/0000-0001-5156-5448" target="_blank" title="ORCID"><i class="fa-brands fa-orcid"></i></a>
@@ -243,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
