--- a/team/index.html
+++ b/team/index.html
@@ -179,6 +179,20 @@
           <a href="https://github.com/gulcehre" target="_blank"><i class="fab fa-github"></i></a>          
         </div>
       </div>
+    
+    </div>
+      <div class="member">
+      <img src="/images/profiles/ulascanyazar.jpg" alt="Ulaş Can Yazar">
+      <div class="member-info">
+        <h3><a href="/team/ulascanyazar/">Ulaş Can Yazar</a></h3>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Jan 2025 - cont.</p>
+        <p> • B.Sc. Physics, METU (2023) </p>
+        <p><strong>Research Area:</strong> Accelerated materials discovery</p>
+        <div class="icons">
+          <a href="mailto:can.yazarg@metu.edu.tr"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/ulascanyazar/" target="_blank"><i class="fab fa-linkedin"></i></a>    
+        </div>
+      </div>
     </div>
     
   <div class="member">
@@ -243,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
