--- a/team/index.html
+++ b/team/index.html
@@ -155,7 +155,7 @@
       <img src="/images/profiles/samildincer.jpg" alt="Mehmet Şamil Dinçer">
       <div class="member-info">
         <h3><a href="/team/samildincer/">Mehmet Şamil Dinçer</a></h3>
-        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2022 - cont.</p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2022 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Computational thermodynamics </p>
         <div class="icons">
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
