--- a/team/index.html
+++ b/team/index.html
@@ -111,7 +111,7 @@
         <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2024 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
-        <p> • Minor, Physics, METU (2025)</p>
+        <p> • Minor, Solid State Physics, METU (2025)</p>
         <p><strong>Research Area:</strong> Electronic properties of materials</p>
         <div class="icons">
           <a href="mailto:uakbulut@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
