--- a/team/index.html
+++ b/team/index.html
@@ -182,7 +182,7 @@
     
     </div>
       <div class="member">
-      <img src="/images/profiles/ulascanyazar.jpg" alt="Ulaş Can Yazar">
+      <img src="/images/profiles/ulascanyazar.png" alt="Ulaş Can Yazar">
       <div class="member-info">
         <h3><a href="/team/ulascanyazar/">Ulaş Can Yazar</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Jan 2025 - cont.</p>
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
