--- a/team/ulascanyazar/index.html
+++ b/team/ulascanyazar/index.html
@@ -157,7 +157,7 @@
 
   <div class="section">
     <div class="profile">
-      <img src="/images/profiles/ulascanyazar.jpg" alt="Ulaş Can Yazar">
+      <img src="/images/profiles/ulascanyazar.png" alt="Ulaş Can Yazar">
       <div class="details">
         <h2>Ulaş Can Yazar</h2>
         <p class="tenure"> Jan 2025 – cont.</p>
