--- a/team/index.html
+++ b/team/index.html
@@ -194,6 +194,36 @@
         </div>
       </div>
     </div>
+
+      </div>
+      <div class="member">
+      <img src="/images/profiles/ilkeyilmaz.jpg" alt="İlke Yılmaz">
+      <div class="member-info">
+        <h3><a href="/team/ilkeyilmaz/">İlke Yılmaz</a></h3>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2023 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
+        <p><strong>Research Area:</strong> </p>
+        <div class="icons">
+          <a href="mailto:"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/yilmaz-ilke/" target="_blank"><i class="fab fa-linkedin"></i></a>    
+        </div>
+      </div>
+    </div>
+
+    </div>
+      <div class="member">
+      <img src="/images/profiles/aleynadaldal.jpg" alt="Aleyna Daldal">
+      <div class="member-info">
+        <h3><a href="/team/aleynadaldal/">Aleyna Daldal</a></h3>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Sept 2025 - cont.</p>
+        <p> • B.Sc. Physics, METU (2025) </p>
+        <p><strong>Research Area:</strong> </p>
+        <div class="icons">
+          <a href="mailto:"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/aleynadaldal/" target="_blank"><i class="fab fa-linkedin"></i></a>    
+        </div>
+      </div>
+    </div>
     
   <div class="member">
       <img src="/images/kedos.jpg" alt="Student 6">
@@ -257,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
