--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -175,7 +175,7 @@
         </ul>
 
         <p><strong>Research Area:</strong></p>
-        <p>Process optimization, reinforcement learning, hydrometallurgy</p>
+        <p>Process optimization, reinforcement learning, hydrometallurgy, lithium-ion batteries</p>
       </div>
     </div>
 
