--- a/team/index.html
+++ b/team/index.html
@@ -223,6 +223,21 @@
         </div>
       </div>
     </div>
+
+    <div class="member">
+      <img src="/images/profiles/ogulcandemirdag.jpg" alt="Oğulcan Demirdağ">
+      <div class="member-info">
+        <h3><a href="/team/ogulcandemirdag/">Ünver Oğulcan Demirdağ</a></h3>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Oct 2023 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
+        <p><strong>Research Area:</strong> </p>
+        <div class="icons">
+          <a href="mailto:"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/%C3%BCnver-o%C4%9Fulcan-demira%C4%9F-426434159/" target="_blank"><i class="fab fa-linkedin"></i></a>    
+        </div>
+      </div>
+    </div>
+
     
   <div class="member">
       <img src="/images/kedos.jpg" alt="Student 6">
@@ -286,6 +301,7 @@
 
 </body>
 </html>
+
 
 
 
