--- a/team/index.html
+++ b/team/index.html
@@ -238,6 +238,20 @@
       </div>
     </div>
 
+      <div class="member">
+      <img src="/images/profiles/umutcangulletutan.jpg" alt="Umut Can Gülletutan">
+      <div class="member-info">
+        <h3><a href="/team/umutcangulletutan/">Umut Can Gülletutan</a></h3>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Oct 2022 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2021) </p>
+        <p><strong>Research Area: Additive Manufacturing and Machine Learning Models</strong> </p>
+        <div class="icons">
+          <a href="mailto:"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/umutgulletutan/" target="_blank"><i class="fab fa-linkedin"></i></a>    
+        </div>
+      </div>
+    </div>
+
     
   <div class="member">
       <img src="/images/kedos.jpg" alt="Student 6">
@@ -301,6 +315,7 @@
 
 </body>
 </html>
+
 
 
 
