--- a/team/index.html
+++ b/team/index.html
@@ -244,7 +244,7 @@
         <h3><a href="/team/umutcangulletutan/">Umut Can Gülletutan</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> Oct 2022 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2021) </p>
-        <p><strong>Research Area: Additive Manufacturing and Machine Learning Models</strong> </p>
+        <p><strong>Research Area: </strong> Additive Manufacturing and Machine Learning Models </p>
         <div class="icons">
           <a href="mailto:"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/umutgulletutan/" target="_blank"><i class="fab fa-linkedin"></i></a>    
@@ -315,6 +315,7 @@
 
 </body>
 </html>
+
 
 
 
