--- a/research/index.html
+++ b/research/index.html
@@ -87,10 +87,10 @@
 
         <div class="research-item">
             <div class="research-description">
-                <h3>Computational Materials Science</h3>
-                <p>Using advanced simulations and modeling to understand the fundamental behavior of materials at the atomic scale.</p>
+                <h3>Hydrometallurgical recycling process optimization</h3>
+                <p>Machine learning methods is applied to optimize complex chemical and recycling processes. Such approaches enable more efficient resource recovery and support the development of sustainable, environmentally friendly technologies. It provides deeper insights into the mechanisms of hydrometallurgical processes, which have traditionally relied on empirical methods. </p>
             </div>
-            <img src="/images/matscicomp.jpg" alt="Research Area 2">
+            <img src="/images/research/leaching.png" alt="Hydro">
         </div>
     </div>
         <!-- You can add more research areas here in the same format -->
@@ -135,3 +135,4 @@
   </script>
 </body>
 </html>
+
