--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -182,7 +182,7 @@
     <div class="conferences">
       <h3>Conferences</h3>
       <ul>
-        <li> Hopefully soon :) </li>
+        <li> Topsakal, I., & Sargin, I. (2025, Sept). Reinforcement Learning Framework for Optimizing Leaching Recovery from End-of-Life LIBs. Presented at the E-MRS Fall 2025 Conference. </li>
       </ul>
     </div>
 
