--- a/team/aleynadaldal/index.html
+++ b/team/aleynadaldal/index.html
@@ -160,7 +160,7 @@
       <img src="/images/profiles/aleynadaldal.png" alt="Ulaş Can Yazar">
       <div class="details">
         <h2>Aleyna Daldal</h2>
-        <p class="tenure"> Sept 2025 – cont.</p>
+        <p class="tenure"> MSc. Student | Sept 2025 – cont.</p>
 
         <div class="icons">
           <a href="mailto:"><i class="fas fa-envelope"></i></a>
