--- a/team/dilarahasil/index.html
+++ b/team/dilarahasil/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -154,7 +154,7 @@
       <img src="/images/profiles/dilarahasil.jpg" alt="Dilara Hasıl">
       <div class="details">
         <h2>Dilara Hasıl</h2>
-        <p class="tenure">Jan 2024 – cont.</p>
+        <p class="tenure"> MSc. Student | Jan 2024 – cont.</p>
 
         <div class="icons">
           <a href="mailto:dilara.hasil@metu.edu.tr" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
