--- a/team/gulcehreyuksel/index.html
+++ b/team/gulcehreyuksel/index.html
@@ -159,7 +159,7 @@
       <img src="/images/profiles/gulcehreyuksel.jpg" alt="Gülçehre Yüksel">
       <div class="details">
         <h2>Gülçehre Duygu Yüksel</h2>
-        <p class="tenure">2023 – cont.</p>
+        <p class="tenure"> MSc. Student | 2023 – cont.</p>
 
         <div class="icons">
           <a href="mailto:yukselg@metu.edu.tr" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
