--- a/team/ilkeyilmaz/index.html
+++ b/team/ilkeyilmaz/index.html
@@ -159,7 +159,7 @@
       <img src="/images/profiles/ilkeyilmaz.jpg" alt="İlke Yılmaz">
       <div class="details">
         <h2>İlke Yılmaz</h2>
-        <p class="tenure">Sept 2023 – cont.</p>
+        <p class="tenure"> MSc. Student | Sept 2023 – cont.</p>
 
         <div class="icons">
           <a href="mailto:" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
