--- a/team/ogulcandemirdag/index.html
+++ b/team/ogulcandemirdag/index.html
@@ -160,7 +160,7 @@
       <img src="/images/profiles/ogulcandemirdag.jpg" alt="Oğulcan Demirdağ">
       <div class="details">
         <h2>Ünver Oğulcan Demirdağ</h2>
-        <p class="tenure">Oct 2023 – cont.</p>
+        <p class="tenure"> MSc. Student | Oct 2023 – cont.</p>
 
         <div class="icons">
           <a href="mailto:" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
