--- a/team/samildincer/index.html
+++ b/team/samildincer/index.html
@@ -160,7 +160,7 @@
       <img src="/images/profiles/samildincer.jpg" alt="Şamil Dinçer">
       <div class="details">
         <h2>Mehmet Şamil Dinçer</h2>
-        <p class="tenure"> Sept 2022 – cont.</p>
+        <p class="tenure"> MSc. Student | Sept 2022 – cont.</p>
 
         <div class="icons">
           <a href="mailto:samildincer@gmail.com"><i class="fas fa-envelope"></i></a>
