--- a/team/ugurakbulut/index.html
+++ b/team/ugurakbulut/index.html
@@ -159,7 +159,7 @@
       <img src="/images/profiles/ugurakbulut.jpg" alt="Uğur Akbulut">
       <div class="details">
         <h2>Rıza Uğur Akbulut</h2>
-        <p class="tenure">Sept 2024 – cont.</p>
+        <p class="tenure"> MSc. Student | Sept 2024 – cont.</p>
 
         <div class="icons">
           <a href="mailto:uakbulut@metu.edu.tr" title="Email" aria-label="Email"><i class="fas fa-envelope"></i></a>
