--- a/team/ulascanyazar/index.html
+++ b/team/ulascanyazar/index.html
@@ -160,7 +160,7 @@
       <img src="/images/profiles/ulascanyazar.png" alt="Ulaş Can Yazar">
       <div class="details">
         <h2>Ulaş Can Yazar</h2>
-        <p class="tenure"> Jan 2025 – cont.</p>
+        <p class="tenure"> MSc. Student | Jan 2025 – cont.</p>
 
         <div class="icons">
           <a href="mailto:can.yazar@metu.edu.tr"><i class="fas fa-envelope"></i></a>
