--- a/team/umutcangulletutan/index.html
+++ b/team/umutcangulletutan/index.html
@@ -160,7 +160,7 @@
       <img src="/images/profiles/umutcangulletutan.jpg" alt="Umut Can Gülletutan">
       <div class="details">
         <h2>Umut Can Gülletutan</h2>
-        <p class="tenure"> Sept 2022 – cont</p>
+        <p class="tenure"> MSc. Student | Sept 2022 – cont</p>
 
         <div class="icons">
           <a href="mailto:"><i class="fas fa-envelope"></i></a>
