--- a/contact/index.html
+++ b/contact/index.html
@@ -112,7 +112,7 @@
         <p>Üniversiteler Mahallesi, Dumlupınar Bulvarı</p>
         <p>Department of Metallurgical and Materials Engineering</p>
         <p>Middle East Technical University</p>
-        <p>Room no: A-201, 06800</p>
+        <p>Office: A-201, Lab: B-206, 06800</p>
         <p>Ankara, Türkiye</p>
         <p>Email: isargin  [at ] metu.edu.tr</p>
 
@@ -180,4 +180,5 @@
 
 </body>
 </html>
+
 
